--- a/ex01/mendeleiev.html
+++ b/ex01/mendeleiev.html
@@ -14,12 +14,14 @@
 		<title>Mendeleiv</title>
 		<style>
 		.container {
-			background-color: red;
 			width: 80px;
 			height: 80px;
 		}
 		h1 {
 			text-align: center;
+		}
+		.tab1 {
+			margin-bottom: 80px;
 		}
 		.atomic {
 			font-size: 30px;
@@ -36,7 +38,7 @@
 		</style>
 	</head>
 	<body>
-	<table>
+	<table class="tab1">
 
 		<tr>
 			<td class="container" style="background-color:#9A2EFE;">
@@ -527,6 +529,164 @@
 				<div class="atomic_weight">(276)</div>
 				<div class="atomic">Mt</div>
 				<div class="atomic_number">109</div>
+			</td>
+			<td class="container" style="background:#F3F781">
+				<div class="atomic_weight">(281)</div>
+				<div class="atomic">Ds</div>
+				<div class="atomic_number">110</div>
+			</td>
+			<td class="container" style="background:#F3F781">
+				<div class="atomic_weight">(280)</div>
+				<div class="atomic">Rg</div>
+				<div class="atomic_number">111</div>
+			</td>
+			<td class="container" style="background:#F3F781">
+				<div class="atomic_weight">(285)</div>
+				<div class="atomic">Cn</div>
+				<div class="atomic_number">112</div>
+			</td>
+			<td class="container" style="background:#D8D8D8">
+				<div class="atomic_weight">(284)</div>
+				<div class="atomic">Nh</div>
+				<div class="atomic_number">113</div>
+			</td>
+			<td class="container" style="background:#D8D8D8">
+				<div class="atomic_weight">(289)</div>
+				<div class="atomic">Fl</div>
+				<div class="atomic_number">114</div>
+			</td>
+			<td class="container" style="background:#D8D8D8">
+				<div class="atomic_weight">(288)</div>
+				<div class="atomic">Mc</div>
+				<div class="atomic_number">115</div>
+			</td>
+			<td class="container" style="background:#D8D8D8">
+				<div class="atomic_weight">(292)</div>
+				<div class="atomic">Lv</div>
+				<div class="atomic_number">116</div>
+			</td>
+			<td class="container" style="background:#D8D8D8">
+				<div class="atomic_weight">(292)</div>
+				<div class="atomic">Ts</div>
+				<div class="atomic_number">117</div>
+			</td>
+			<td class="container" style="background:#D8D8D8">
+				<div class="atomic_weight">(294)</div>
+				<div class="atomic">Og</div>
+				<div class="atomic_number">118</div>
+			</td>
+		</tr>
+	</table>
+	<table>
+		<tr>
+			<td class="container" style="background-color:white">
+			</td>
+			<td class="container" style="background-color:white">
+			</td>
+			<td class="container" style="background-color:white">
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">138.91</div>
+				<div class="atomic">La</div>
+				<div class="atomic_number">57</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">140.12</div>
+				<div class="atomic">Ce</div>
+				<div class="atomic_number">58</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">140.91</div>
+				<div class="atomic">Pr</div>
+				<div class="atomic_number">59</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">144.24</div>
+				<div class="atomic">Nd</div>
+				<div class="atomic_number">60</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">(145)</div>
+				<div class="atomic">Pm</div>
+				<div class="atomic_number">61</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">150.36</div>
+				<div class="atomic">Sm</div>
+				<div class="atomic_number">62</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">151.96</div>
+				<div class="atomic">Eu</div>
+				<div class="atomic_number">63</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">157.25</div>
+				<div class="atomic">Gd</div>
+				<div class="atomic_number">64</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">158.93</div>
+				<div class="atomic">Tb</div>
+				<div class="atomic_number">65</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">162.50</div>
+				<div class="atomic">Dy</div>
+				<div class="atomic_number">66</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">164.93</div>
+				<div class="atomic">Ho</div>
+				<div class="atomic_number">67</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">167.26</div>
+				<div class="atomic">Er</div>
+				<div class="atomic_number">68</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">168.93</div>
+				<div class="atomic">Tm</div>
+				<div class="atomic_number">69</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">173.05</div>
+				<div class="atomic">Yb</div>
+				<div class="atomic_number">70</div>
+			</td>
+			<td class="container" style="background:#BEF781">
+				<div class="atomic_weight">174.97</div>
+				<div class="atomic">Lu</div>
+				<div class="atomic_number">71</div>
+			</td>
+		</tr>
+		<tr>
+			<td class="container" style="background-color:white">
+			</td>
+			<td class="container" style="background-color:white">
+			</td>
+			<td class="container" style="background-color:white">
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(227)</div>
+				<div class="atomic">Ac</div>
+				<div class="atomic_number">89</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">232.04</div>
+				<div class="atomic">Th</div>
+				<div class="atomic_number">90</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">231.04</div>
+				<div class="atomic">Pa</div>
+				<div class="atomic_number">91</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">238.03</div>
+				<div class="atomic">U</div>
+				<div class="atomic_number">92</div>
 			</td>
 		</tr>
 	</table>
