--- a/ex01/mendeleiev.html
+++ b/ex01/mendeleiev.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
 
-<!-- #9A2EFE VIOLET -->
-<!-- #01DFD7 TURQUOISE  -->
-<!-- #FF00BF ROSE FUSHIA -->
-<!-- #FFFF00 JAUNE CANARI -->
-<!-- #F3F781 JAUNE -->
-<!-- #298A08 VERT -->
-<!-- #FF8000 ORANGE PETANT -->
-<!-- #F7BE81 ORANGE  -->
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -577,7 +569,7 @@
 			</td>
 		</tr>
 	</table>
-	<table>
+	<table class="tab1">
 		<tr>
 			<td class="container" style="background-color:white">
 			</td>
@@ -688,7 +680,63 @@
 				<div class="atomic">U</div>
 				<div class="atomic_number">92</div>
 			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(237)</div>
+				<div class="atomic">Np</div>
+				<div class="atomic_number">93</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(244)</div>
+				<div class="atomic">Pu</div>
+				<div class="atomic_number">94</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(243)</div>
+				<div class="atomic">Am</div>
+				<div class="atomic_number">95</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(247)</div>
+				<div class="atomic">Cm</div>
+				<div class="atomic_number">96</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(247)</div>
+				<div class="atomic">Bk</div>
+				<div class="atomic_number">97</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(251)</div>
+				<div class="atomic">Cf</div>
+				<div class="atomic_number">98</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(252)</div>
+				<div class="atomic">Es</div>
+				<div class="atomic_number">99</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(257)</div>
+				<div class="atomic">Fm</div>
+				<div class="atomic_number">100</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(258)</div>
+				<div class="atomic">Md</div>
+				<div class="atomic_number">101</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(259)</div>
+				<div class="atomic">No</div>
+				<div class="atomic_number">102</div>
+			</td>
+			<td class="container" style="background:#74DF00">
+				<div class="atomic_weight">(262)</div>
+				<div class="atomic">Lr</div>
+				<div class="atomic_number">103</div>
+			</td>
 		</tr>
 	</table>
+	<img src="https://www.digischool.fr/images/article/brevet-de-sciences-nos-questions-reponses-sur-les-svt-et-la-physique-chimie-lg-35299.jpg"/>
 	</body>
 </html>
