ex02_to_finish_at_home

--- a/ex02/doft.html
+++ b/ex02/doft.html
@@ -10,6 +10,7 @@
 			<img src="resources/day_of_the_42.png"height=110px/>
 			<img class="img_top" src="resources/reload.png"/height=20px/>
 			<img class="img_bottom" src="resources/close.gif"/height=20px/>
+			<img class="img_loupe" src="resources/loupe.png">
 		</div>
 		<div class="inline-block-left">
 			<div class="image">
