--- a/D00/ex02/doft.html
+++ b/D00/ex02/doft.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="doft.css"/>
-		<title>Day of the 42</title>
-	</head>
-	<body>
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="doft.css"/>
+	<title>Day of the 42</title>
+</head>
+<body>
+	<div id="main-container">
 		<div class="header-block">
 			<img src="resources/day_of_the_42.png"height=110px/>
 			<img class="img_top" src="resources/reload.png"/height=20px/>
 			<img class="img_bottom" src="resources/close.gif"/height=20px/>
 			<img class="img_loupe" src="resources/loupe.png">
 		</div>
-		<div class="inline-block-left">
-			<div class="image">
-				<img src="resources/arrow.png" height=80px/>
+		<div class="second-container">
+
+
+			<div class="inline-block-left">
+				<img src="resources/arrow.png" height=70px/>
+				<img src="resources/main.png" height=70px/>
+				<div class="image-border-red">
+					<img src="resources/oeil.png" height=70px/>
+				</div>
+				<img src="resources/outil.png" height=70px/>
+				<img src="resources/chat-icon.png" height=70px/>
 			</div>
-			<div class="image">
-				<img src="resources/main.png" height=80px/>
+
+
+			<div class="inline-block-middle">
+				<img src="resources/cluster.jpg" height=500px/>
 			</div>
-			<div class="image">
-				<img src="resources/oeil.png" height=80px/>
+
+
+			<div class="inline-block-left">
+				<img src="resources/book.png" height=70px/>
+				<img src="resources/towel.png" height=70px/>
+				<img src="resources/brick.jpg" height=70px/>
 			</div>
-			<div class="image">
-				<img src="resources/outil.png" height=80px/>
-			</div>
-			<div class="image">
-				<img src="resources/chat-icon.png" height=80px/>
-			</div>
+
+
 		</div>
-	</body>
+	</div>
+</body>
 </html>
