--- a/D00/ex02/doft.html
+++ b/D00/ex02/doft.html
@@ -11,21 +11,21 @@
 	<div id="main-container">
 		<div class="header-block">
 			<img src="resources/day_of_the_42.png"height=110px/>
-			<img class="img_top" src="resources/reload.png"/height=20px/>
-			<img class="img_bottom" src="resources/close.gif"/height=20px/>
+			<a href="http://www.disney.com"  title="Recommencer au début"><img class="img_top" src="resources/reload.png" /height=20px/></a>
+			<a href="http://www.relaischateaux.com" title="Déconnecter"><img class="img_bottom" src="resources/close.gif"/height=20px/></a>
 			<img class="img_loupe" src="resources/loupe.png">
 		</div>
 		<div class="second-container">
 
 
 			<div class="extern-block">
-				<img src="resources/arrow.png" height=70px/>
-				<img src="resources/main.png" height=70px/>
+				<img src="resources/arrow.png" alt="Avancer" height=70px/>
+				<img src="resources/main.png" alt="Prendre" height=70px/>
 				<div class="image-border-red">
-					<img src="resources/oeil.png" height=70px/>
+					<img src="resources/oeil.png" alt="Regarder" height=70px/>
 				</div>
-				<img src="resources/outil.png" height=70px/>
-				<img src="resources/chat-icon.png" height=70px/>
+				<img src="resources/outil.png" alt="Utiliser" height=70px/>
+				<img src="resources/chat-icon.png" alt= "Parler" height=70px/>
 			</div>
 
 
@@ -35,7 +35,7 @@
 
 
 			<div class="extern-block">
-				<img src="resources/book.png" height=70px/>
+				<img src="resources/book.png" height=110px/>
 				<img src="resources/towel.png" height=50px/>
 				<div class="image-brick"></div>
 			</div>
@@ -48,7 +48,7 @@
 			<div class="wrapper-input">
 			<form>
 				<input class="input-field" type="text">
-				<input type="submit" value="Repondre"/>
+				<input class="input-submit" type="submit" value="Repondre"/>
 			</form>
 			</div>
 		</div>
