--- a/D00/ex02/doft.html
+++ b/D00/ex02/doft.html
@@ -1,43 +1,43 @@
-<!-- DIFF ENTRE DIV ET SPAN -> div = block span = inline -->
-
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="doft.css"/>
-	<title>Day of the 42</title>
+	<div class ="title-font"><title>Day of the 42</title></div>
 </head>
 <body>
 	<div id="main-container">
 		<div class="header-block">
-			<img src="resources/day_of_the_42.png"height=110px/>
+			<img src="resources/day_of_the_42.png" alt="title" title="title" height=110px/>
 			<a href="http://www.disney.com"  title="Recommencer au début"><img class="img_top" src="resources/reload.png" /height=20px/></a>
-			<a href="http://www.relaischateaux.com" title="Déconnecter"><img class="img_bottom" src="resources/close.gif"/height=20px/></a>
-			<img class="img_loupe" src="resources/loupe.png">
+			<a href="http://www.relaischateaux.com" title="Déconnecter"><img class="img_bottom" src="resources/close.gif" height=20px/></a>
+			<img class="img_loupe" alt="search" title="loupe" src="resources/loupe.png">
 		</div>
 		<div class="second-container">
 
 
-			<div class="extern-block">
-				<img src="resources/arrow.png" alt="Avancer" height=70px/>
-				<img src="resources/main.png" alt="Prendre" height=70px/>
+			<div class="extern-block-left">
+				<img src="resources/arrow.png" alt="Avancer" title="Avancer" height=70px/>
+				<img src="resources/main.png" alt="Prendre" title="Prendre" height=70px/>
 				<div class="image-border-red">
-					<img src="resources/oeil.png" alt="Regarder" height=70px/>
+					<img src="resources/oeil.png" alt="Regarder" title="Regarder" height=70px/>
 				</div>
-				<img src="resources/outil.png" alt="Utiliser" height=70px/>
-				<img src="resources/chat-icon.png" alt= "Parler" height=70px/>
+				<img src="resources/outil.png" alt="Utiliser" title="Utiliser" height=70px/>
+				<img src="resources/chat-icon.png" alt= "Parler" title="Parler" height=70px/>
 			</div>
 
 
 			<div class="inline-block-middle">
-				<img class="img-cluster" src="resources/cluster.jpg"/>
+				<img class="img-cluster" src="resources/cluster.jpg" alt="cluster" title="cluster"/>
+				<a href="http://www.apple.com" class="apple-link"></a>
+				<a href="http://www.ikea.com" class="ikea-link"></a>
 			</div>
 
 
-			<div class="extern-block">
-				<img src="resources/book.png" height=110px/>
-				<img src="resources/towel.png" height=50px/>
-				<div class="image-brick"></div>
+			<div class="extern-block-right">
+				<img src="resources/book.png" alt="resources" title="resources" height=100px/>
+				<img src="resources/towel.png" alt="towel" title="towel" height=50px/>
+				<div class="image-brick" title="brick"></div>
 			</div>
 		</div>
 		<div class="green-block">
