--- a/D00/ex03/responsive.html
+++ b/D00/ex03/responsive.html
@@ -3,35 +3,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="responsive.css"/>
 		<title>Mendeleiv</title>
-		<style>
-		.container {
-			width: 80px;
-			height: 80px;
-		}
-		h1 {
-			text-align: center;
-		}
-		.tab1 {
-			margin-bottom: 80px;
-			min-width: 1407px;
-		}
-		.atomic {
-			font-size: 30px;
-			text-align: center
-		}
-		.atomic_weight {
-			vertical-align: top;
-			text-align: right;
-		}
-		.atomic_number {
-			vertical-align: bottom;
-			text-align: left;
-		}
-		</style>
 	</head>
 	<body>
-	<table class="tab1">
+	<table class="tab1" cellspacing="2">
 
 		<tr>
 			<td class="container" style="background-color:#9A2EFE;">
@@ -397,7 +373,7 @@
 				<div class="atomic_number">56</div>
 			</td>
 			<td class="container" style="background:#F3F781">
-				<br/>
+				<div class="atomic_number" style="visibility: hidden;">89-103</div>
 				<div class="atomic">La-Lu</div>
 				<div class="atomic_number">57-71</div>
 			</td>
@@ -489,7 +465,7 @@
 				<div class="atomic_number">88</div>
 			</td>
 			<td class="container" style="background:#F3F781">
-				<br/>
+				<div class="atomic_number" style="visibility: hidden;">89-103</div>
 				<div class="atomic">Ac-Lr</div>
 				<div class="atomic_number">89-103</div>
 			</td>
@@ -570,7 +546,7 @@
 			</td>
 		</tr>
 	</table>
-	<table class="tab1">
+	<table class="tab1" cellspacing="2">
 		<tr>
 			<td class="container" style="background-color:white">
 			</td>
@@ -738,6 +714,8 @@
 			</td>
 		</tr>
 	</table>
-	<img src="https://www.digischool.fr/images/article/brevet-de-sciences-nos-questions-reponses-sur-les-svt-et-la-physique-chimie-lg-35299.jpg"/>
+	<div class="wrapper-img">
+	<img src="https://www.digischool.fr/images/article/brevet-de-sciences-nos-questions-reponses-sur-les-svt-et-la-physique-chimie-lg-35299.jpg" class="image"/>
+</div>
 	</body>
 </html>
