--- a/D00/ex01/mendeleiev.html
+++ b/D00/ex01/mendeleiev.html
@@ -31,7 +31,7 @@
 		</style>
 	</head>
 	<body>
-	<table class="tab1">
+	<table class="tab1" contenteditable="true">
 
 		<tr>
 			<td class="container" style="background-color:#9A2EFE;">
@@ -570,7 +570,7 @@
 			</td>
 		</tr>
 	</table>
-	<table class="tab1">
+	<table class="tab1" contenteditable="true">
 		<tr>
 			<td class="container" style="background-color:white">
 			</td>
