--- a/D00/ex03/responsive.html
+++ b/D00/ex03/responsive.html
@@ -7,7 +7,7 @@
 		<title>Mendeleiv</title>
 	</head>
 	<body>
-	<table class="tab1" cellspacing="2">
+	<table class="tab1" cellspacing="2" contenteditable="true">
 
 		<tr>
 			<td class="container" style="background-color:#9A2EFE;">
@@ -546,7 +546,7 @@
 			</td>
 		</tr>
 	</table>
-	<table class="tab1" cellspacing="2">
+	<table class="tab1" cellspacing="2" contenteditable="true">
 		<tr>
 			<td class="container" style="background-color:white">
 			</td>
