--- a/D00/ex04/menu.html
+++ b/D00/ex04/menu.html
@@ -16,12 +16,11 @@
 			<img src="https://s7d9.scene7.com/is/image/SAQ/sandwichs-cocktail-rosette-de-lyon?$saq-recet$" width=370px/>
 		</div>
 		<div class="dropdown">
-    		<button class="dropbtn">Type de pain</button>
+    		<button class="dropbtn">Ingrédients</button>
         	<div class="dropdown-content">
-            	<a>Ronde</a>
-            	<a>Carré</a>
-            	<a>Rectangle</a>
-            	<a>Sans assiette</a>
+            	<a>Salade</a>
+            	<a>Cornichon</a>
+            	<a>Rosette</a>
         	</div>
         </div>
 	</center>
@@ -32,12 +31,11 @@
 		<img src="http://static.cuisineaz.com/610x610/i106811-sandwich-au-jambon-fromage-frais-et-fraises.jpg" width=250px/>
 			</div>
 		<div class="dropdown">
-            <button class="dropbtn">Type de pain</button>
+            <button class="dropbtn">Ingrédients</button>
                 <div class="dropdown-content">
-                    <a>Ronde</a>
-                    <a>Carre</a>
-                    <a>Rectangle</a>
-                    <a>Sans assiette</a>
+                    <a>Salade</a>
+                    <a>Tomate</a>
+                    <a>Jambon</a>
                 </div>
             </div>
 		</center>
@@ -48,12 +46,12 @@
 		<img src="https://www.lepoulet.qc.ca/data/Thumbnails/d49a5568-0933-481e-8abc-e22ec5a1668a/d49a5568-0933-481e-8abc-e22ec5a1668a_1500x900.jpg" width=420px/>
 	</div>
 		<div class="dropdown">
-            <button class="dropbtn">Type de pain</button>
+            <button class="dropbtn">Ingrédients</button>
                 <div class="dropdown-content">
-                    <a>Ronde</a>
-                    <a>Carre</a>
-                    <a>Rectangle</a>
-                    <a>Sans assiette</a>
+                    <a>Salade</a>
+                    <a>Tomate</a>
+                    <a>Oignon</a>
+                    <a>Poulet</a>
                 </div>
             </div>
 			</center>
