--- a/RUSH00/e-commerce.html
+++ b/RUSH00/e-commerce.html
@@ -27,7 +27,7 @@
 		</div>
 			<img class="head-img" src="http://www.epresspack.net/mmr1/static/img/longchamp/LG_PENELOPE_SS2016.jpg"/>
 		<div class="promo">
-			-10€ POUR TOUTE INSCRIPTION SUR TOUT LE SITE
+			-10€ SUR TOUT LE SITE POUR TOUTE COMMANDE !
 		</div>
 			<div class="middle-page">
 				<div class="row">
