--- a/RUSH00/e-commerce.html
+++ b/RUSH00/e-commerce.html
@@ -12,6 +12,7 @@
 				<div class="categories">
 					<!-- <wh>HELLO</wh> -->
 					<ul id="menu-deroulant">
+		<div class="category">
 		<li><wh>COULEUR</wh>
 			<ul>
 				<li><class = lien sous menu 1</li>
@@ -20,6 +21,17 @@
 				<li><wh>MARRON</wh></li>
 			</ul>
 		</li>
+	</div>
+	<div class="category">
+		<li><wh>MARQUES</wh>
+			<ul>
+				<li><class = lien sous menu 1</li>
+				<li><wh>LONGCHAMP</wh></li>
+				<li><wh>COACH</wh></li>
+				<li><wh>GUESS</wh></li>
+			</ul>
+		</li>
+	</div>
 			</div>
 			<button class="connexion" type="button"><txtsize>SE CONNECTER</txtsize></button>
 			<button class="inscription" type="button"><txtsize>S'INSCRIRE</txtsize></button>
