--- a/D09/ex00/balloon.html
+++ b/D09/ex00/balloon.html
@@ -17,7 +17,9 @@
 		</div>
 		<script>
 			var elem;
+			var color;
 
+			color = 1;
 			elem = document.getElementById('balloon');
 
 			elem.addEventListener("click", get_balloon_bigger);
@@ -26,8 +28,6 @@
 			height = elem.offsetHeight;
 
 			function get_balloon_bigger() {
-				console.log("BIG");
-				console.log('width', width)
 				width += 10;
 				height += 10;
 				if (width > 420)
@@ -35,19 +35,49 @@
 					width = 200;
 					height = 200;
 				}
+				else if (color == 1) {
+					elem.style.backgroundColor = "green";
+					color = 2;
+				}
+				else if (color == 2) {
+					elem.style.backgroundColor = "blue";
+					color = 3;
+				}
+				else if (color == 3) {
+					elem.style.backgroundColor = "red";
+					color = 1;
+				}
 				elem.style.width = width + "px";
 				elem.style.height = height + "px";
+
 			}
 
 			function get_balloon_smaller() {
-				console.log("SMALL");
-				console.log('width', width)
 				width -= 5;
 				height -= 5;
 				if (width >= 200)
 				{
 					elem.style.width = width + "px";
 					elem.style.height = height + "px";
+				}
+				else {
+					width = 200;
+					height = 200;
+				}
+				if (color == 1)
+				{
+					elem.style.backgroundColor = "blue";
+					color = 3;
+				}
+				else if (color == 2)
+				{
+					elem.style.backgroundColor = "red";
+					color = 1;
+				}
+				else if (color == 3)
+				{
+					elem.style.backgroundColor = "green";
+					color = 2;
 				}
 			}
 		</script>
