--- a/D09/ex01/calc.html
+++ b/D09/ex01/calc.html
@@ -16,15 +16,29 @@
 	<input id="right" type="text" value="">
 	<input type="submit" value="Try me!" onClick="Result()">
 	<script>
+	window.setTimeout(TimeOut, 30000);
+
+	function TimeOut() {
+		alert('Please, use me...');
+		window.setTimeout(TimeOut, 30000);
+	}
+
+	filterInt = function (value) {
+	  if (/^(\-|\+)?([0-9]+)$/.test(value))
+	    return Number(value);
+	  return "ERROR";
+	}
+
 	function Result() {
 		var get_data = document.getElementById('select');
 		var get_left = document.getElementById('left');
 		var get_right = document.getElementById('right');
 		var result;
-		var nb1 = parseInt(get_left.value, 10);
-		var nb2 = parseInt(get_right.value, 10);
+		var nb1 = filterInt(get_left.value);
+		var nb2 = filterInt(get_right.value);
 		var zero = 0;
-		if (nb1 < 0 || nb2 < 0)
+
+		if (nb1 < 0 || nb2 < 0 || nb1 == "ERROR" || nb2 == "ERROR")
 			result = "Error :(";
 		else if (get_data.value == "add")
 			result = nb1 + nb2;
